RESOLVED FIXED155808
REGRESSION(r189129): <audio> elements do not have playback controls on iOS.
https://bugs.webkit.org/show_bug.cgi?id=155808
Summary REGRESSION(r189129): <audio> elements do not have playback controls on iOS.
Jer Noble
Reported 2016-03-23 15:00:12 PDT
REGRESSION(r189129): <audio> elements do not have playback controls on iOS.
Attachments
Patch (1.72 KB, patch)
2016-03-23 15:01 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-03-23 15:01:38 PDT
Jer Noble
Comment 2 2016-03-23 15:01:59 PDT
WebKit Commit Bot
Comment 3 2016-03-24 11:42:04 PDT
Comment on attachment 274781 [details] Patch Clearing flags on attachment: 274781 Committed r198637: <http://trac.webkit.org/changeset/198637>
WebKit Commit Bot
Comment 4 2016-03-24 11:42:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.