REGRESSION(r189129): <audio> elements do not have playback controls on iOS. https://bugs.webkit.org/show_bug.cgi?id=155808 <rdar://problem/23822457>

Reviewed by Eric Carlson.

Audio elements should never require fullscreen for playback.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::requiresFullscreenForVideoPlayback):


Canonical link: https://commits.webkit.org/173946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198637 268f45cc-cd09-0410-ab3c-d52691b4dbfc